# Phoenix

./: .gitignore  .project-settings.yml  Phoenix.cabal  make.bat
src/: Ast.hs  Evaluator.hs  Main.hs  Parser.hs  PhoenixPrelude.hs  Typechecker.hs  prelude.txt
